Seperate Timeline UI to Timeline,TimelineIndicator, and TimelineCard components

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 
-    <title>itenerary-project</title>
+    <title>itinerary-project</title>
   </head>
   <body>
     <div
