change margin top

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div
       id="root"
-      class="mx-auto mt-4 sm:h-svh sm:max-w-lg overflow-hidden sm:rounded-4xl sm:shadow-2xl"
+      class="mx-auto sm:h-svh sm:max-w-lg overflow-hidden sm:rounded-4xl sm:shadow-2xl"
     ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
