fixing schedule page behavior and layout

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   <body>
     <div
       id="root"
-      class="mx-auto sm:h-svh sm:max-w-lg overflow-hidden sm:rounded-4xl sm:shadow-2xl"
-    ></div>
+      class="mx-auto h-screen overflow-hidden sm:h-svh sm:max-w-lg sm:rounded-4xl sm:shadow-2xl"
+    >
+      <div id="app" class="h-full overflow-y-auto">
+        <!-- React akan masuk ke dalam ini -->
+      </div>
+    </div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
