--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div
       id="root"
-      class="mx-auto h-screen overflow-hidden sm:h-svh sm:max-w-lg sm:rounded-4xl sm:shadow-2xl"
+      class="mx-auto h-screen overflow-y-hidden sm:h-svh sm:max-w-lg sm:rounded-4xl sm:shadow-2xl"
     >
       <div id="app" class="h-full overflow-y-auto">
         <!-- React akan masuk ke dalam ini -->
